<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/main_register_activity"
    tools:context=".registration.Registration">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/user"
        app:civ_border_width="2dp"
        app:civ_border_color="#1333E6"
        android:padding="5dp"
        app:civ_border_overlay="true"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_register_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/border_color"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="12dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:maxHeight="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_register_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/border_color"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/person_ic"
            android:drawablePadding="12dp"
            android:hint="Name"
            android:inputType="text"
            android:maxHeight="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_register_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/border_color"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_ic"
            android:drawablePadding="12dp"
            android:hint="Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/user_register_radio_group"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/gender"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="true"
            android:shadowColor="@android:color/holo_orange_dark"
            android:text="@string/male"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/female"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/user_resister_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_register"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="24sp" />
    </LinearLayout>
    <ProgressBar

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        />
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:SpinKit_Color="#00796B"
        app:SpinKit_Style="FadingCircle"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>